# getresidence-rust

./: .gitignore  Cargo.toml  LICENSE  package-lock.json  package.json  wrangler.toml
src/: handlers.rs  lib.rs
src/handlers/: dubai.rs  mod.rs  styles.rs
