[package]
name = "getresidence-org"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.0.18", features = ["d1"] }
http = "0.2.9"
maud = "*"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
