[package]
name = "getresidence-org"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
worker = { version = "*", features = ["d1"] }
http = "*"
maud = "*"
branca = "*"
getrandom = { version = "*", features = ["js"] }
base64 = "*"
email_address = "0.2.4"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
